fixed dynamic squares to appear behind table

--- a/app/assets/stylesheets/background.scss
+++ b/app/assets/stylesheets/background.scss
@@ -1,6 +1,8 @@
 body {
     background: linear-gradient(to left,#8be349, #91f545);
+    z-index: -10;
 }
+
 .body-text {
     font-family: Baloo;
 }
@@ -34,17 +36,23 @@ body {
     //background: linear-gradient(to left, #8942a8, #ba382f);
     background: linear-gradient(to left,#8be349, #91f545);
     width: 100%;
-    height: 1a00vh;
+    height: 100vh;
     overflow: visible;
 }
 
-.box-area {
+.wrapper {
     position: relative;
+    z-index: 2;
+}
+
+.box-area {
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
+    z-index: 1;
 }
 
 .box-area li {
