--- a/app/assets/stylesheets/transactions.scss
+++ b/app/assets/stylesheets/transactions.scss
@@ -25,7 +25,8 @@
   .input-field {
     margin: 20px auto;
     width: 50%;
-    
+    text-align: center;
+    float: center;
   }
   
   .input-radio {
@@ -50,7 +51,7 @@
   }
   
   .back-button {
-    margin: 20px auto;
+    margin: auto;
     width: 100%;
     text-align: center;
   }
